Prevents horrid flicker from occuring during app list close

Drag closed from FULLSCREEN_SEARCH
Drag closed from HALF_SEARCH
Drag closed from PEEKING
Drag closed from FULLSCREEN_ALL_APPS

Bug: 885909
Change-Id: Ia13a5da2fefa408bc440d663f83763c93a80fc80
Test: Manually tested scenarios:
Reviewed-on: https://chromium-review.googlesource.com/1237395
Commit-Queue: Kevin Strohbehn <ginko@google.com>
Reviewed-by: Yury Khmel <khmel@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593031}
Former-commit-id: 3b19b7fdb430e82380185b8ba5d9a164f671b871